[package]
name = "rust-trie"
version = "0.0.1"
authors = ["Jude Nelson <judecn@gmail.com>"]
license = "GPLv3"
homepage = "https://github.com/jcnelson/rust-trie"
repository = "https://github.com/jcnelson/rust-trie"
description = "Rust trie tests"
keywords = [ "data structure", "trie" ]
readme = "README.md"

[dependencies]
rand = "0.5"

[dependencies.sha2]
version = "0.8.0"
features = ["asm"]
